# httpserver-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binary_file.h  main.cpp  makesite.sh
include/: hash_literal.h
site/: index.html.unified
src/: binary_file.cpp  main.cpp
